--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <section>
-        <h1>Day 1</h1>
-        <h2>Day 1</h2>
-        <h3>Day 1</h3>
-        <h4>Day 1</h4>
+        <h1 class="heading">Day 1</h1>
+        <h2 class="heading">Day 1</h2>
+        <h3 class="heading">Day 1</h3>
+        <h4 class="heading">Day 1</h4>
     </section>
     <article>
-        <h2>Article Header</h2>
+        <h2 id="article-header">Article Header</h2>
         <p>Article Content</p>
     </article>
     <p>Day 1</p>
