--- a/index.html
+++ b/index.html
@@ -8,16 +8,32 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <section>
-        <h1 class="heading">Day 1</h1>
-        <h2 class="heading">Day 1</h2>
-        <h3 class="heading">Day 1</h3>
-        <h4 class="heading">Day 1</h4>
-    </section>
-    <article>
-        <h2 id="article-header">Article Header</h2>
-        <p>Article Content</p>
-    </article>
-    <p>Day 1</p>
+    <header>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Things that Sam has to do.</h1>
+        <section>
+            <input type="text">
+            <ul>
+                <li>Wash cars</li>
+                <li>Walk dogs</li>
+                <li>Cut grass</li>
+            </ul>
+        </section>
+
+    </main>
+
+    <footer>
+        <!---an address-->
+        <!--a logo-->
+    </footer>
 </body>
 </html>
