--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <footer>
         <!---an address-->
         <!--a logo-->
+        <img src="cat.jpg" alt="A Cat with green eyes."">
     </footer>
 </body>
 </html>
