cat logo styled

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <footer>
         <!---an address-->
         <!--a logo-->
-        <img src="cat.jpg" alt="A Cat with green eyes."">
+        <img src="cat.jpg" alt="A Cat with green eyes.">
+        <p>Cat</p>
     </footer>
 </body>
 </html>
