--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <section>
             <input type="text">
             <ul>
-                <li>Wash cars</li>
-                <li>Walk dogs</li>
-                <li>Cut grass</li>
+                <li class="todo">Wash cars</li>
+                <li class = "todo">Walk dogs</li>
+                <li class="todo">Cut grass</li>
             </ul>
         </section>
 
