changed colour scheme

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!---an address-->
         <!--a logo-->
         <img src="cat.jpg" alt="A Cat with green eyes.">
-        <p>Cat</p>
+        <address>Cat, Cattington lane, Catsville</address>
     </footer>
 </body>
 </html>
