list item styled

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <section>
             <input type="text">
             <ul>
-                <li class="todo">Wash cars</li>
-                <li class = "todo">Walk dogs</li>
-                <li class="todo">Cut grass</li>
+                <li class="todo-item">Wash cars</li>
+                <li class = "todo-item">Walk dogs</li>
+                <li class="todo-item">Cut grass</li>
             </ul>
         </section>
 
