prev todos page complete

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Things that Sam has to do.</h1>
         <section>
             <input type="text">
-            <ul>
+            <ul class="todos">
                 <li class="todo-item">Wash cars</li>
                 <li class = "todo-item">Walk dogs</li>
                 <li class="todo-item">Cut grass</li>
